V2/anees-photos/src/app/login/login.component.css
div{

}
.login-container {
    position: relative;
    /* background: white; */
    height: 100%;
    width: 900px;
    margin: 0 auto;
    padding: 0px 0px;
    resize: both;
    overflow: auto;
}

.login-card {
    font-size: 0px;
    width: 100%;
    height: 450px;
    margin: -225px 0 0 0px;
    position: absolute;
    top: 50%;
}

.card {
    display: inline-block;
    width: 50%;
    height: 100%;
    position: absolute;
    
}
.card.left{
    background-color: #171717;
}

.card.right{
    background-color: white;
    left: 50%;    
}

.card-body{
    padding: 75px 40px;
}

.logo-text{
    font-family: "Montserrat", sans-serif;
    font-weight: 700;
    font-size: 65px;
    text-transform: uppercase;
    color: white;

    line-height: 75px;
}

.password-field-container{
    align-items: center;
    padding: 20px 0px;
    display: flex !important;
}
.password-field-container > .input-field{
    margin: 10px;
    background-color: #171717;
    border-width: 2px;
    border-color: #3f4042;
    width: 60%;

}
.password-field-container >.btn.primary {
    background-color: white;
    color: black;
    border-radius: 0px;
    transition-duration: 0.4s;
    border-width: 1px;
    border-color: #3f4042;
    height: 35px;
}

.password-field-container >.btn.primary:hover{
    background-color: #171717;
    color: gray;
}

.arrow-container{
    display: inline-block;
    width: 60px;
    height: 100%;
    position: absolute;
}

.arrow-container.right{
    left: 390px;
}

.arrow-button{
    margin-top: 200px;
    margin-left: 5px;
    display: block;
    width: 50px;
    height: 50px;
    border-radius: 50px;
    
    background-color: transparent;
    transition: all 0.5s ease;
}

.arrow-button.left{
    background-image: url("/assets/controls/left-arrow.png");
    background-repeat: no-repeat;
    background-position: center;
    background-size: 20px;
}

.arrow-button.right{
    background-image: url("/assets/controls/right-arrow.png");
    background-repeat: no-repeat;
    background-position: center;
    background-size: 20px;
}

.arrow-button:hover{
    cursor: pointer;
    background-color: #e4e4e4;
}

.carousel-container{
    width: 330px;
    height: 100%;
    position: absolute;
    left: 60px;

    overflow: hidden;
    text-align: center;
    
}

.carousel-img{
    margin-top: 60px;
    height: 330px;
    position: absolute;
    left: -80px;
}

